Issue #10653: Fix time.strftime() on Windows, check for invalid format strings